# python-grpc-demo

./: .gitignore  README.md
demo1/: Dockerfile.grpc_app  Dockerfile.web_app  README.md  requirements.txt
demo1/client/: client.py
demo1/grpc-services/: client_wrapper.py
demo1/grpc-services/protos/: build.sh
demo1/grpc-services/users/: run-server.sh  sample_client_demo.py
demo1/grpc-users/: run-server.sh  sample_client.py
demo1/protos/: build.sh  cleanup.sh  service.proto  users.proto  users_types.proto
demo1/server/: server.py
demo1/service/: service_pb2.py  service_pb2_grpc.py  users_pb2.py  users_pb2_grpc.py  users_types_pb2.py
demo1/webapp/: app.py  run-server.sh
demo2/: Dockerfile.grpc_app  Dockerfile.web_app  README.md  docker-compose-infra.yml  docker-compose.yaml  requirements.txt
demo2/config/prometheus/: prometheus.yml
demo2/grpc-services/: Dockerfile.users  README.md  client_wrapper.py  docker-compose-infra.yml  docker-compose.yml
demo2/grpc-services/grpc_interceptors/: README.md  __init__.py  _interceptor.py
demo2/protos/: build.sh
demo2/webapp/: app.py  run-server.sh
grpc-middleware/: README.md
grpc-middleware/bidi-streaming/: README.md  pyproject.toml
grpc-middleware/unary-unary/: README.md  pyproject.toml
grpc-middleware/unary-unary/client/: logging_client_interceptor.py
grpc-middleware/unary-unary/server/: interceptors.py  server.py  service_test.py
grpc-middleware/unary-unary/service/: identity.proto  identity_pb2.py  identity_pb2_grpc.py
grpc-middleware/unary-unary/tls_certs/user_sessions/tls/: server.crt
(+31 files in other folders)
